# esp-claw

application/edge_agent/boards/waveshare/waveshare_esp32_p4_nano/: board_devices.yaml
application/edge_agent/components/http_server/: CMakeLists.txt  http_server_core.c  http_server_files_api.c  http_server_mcp_api.c  http_server_priv.h  http_server_status_api.c  http_server_storage_api.c  http_server_utils.c  http_server_webim_api.c
application/edge_agent/components/http_server/frontend_source/src/: App.tsx
application/edge_agent/components/http_server/frontend_source/src/api/: client.ts
application/edge_agent/components/http_server/frontend_source/src/components/layout/: Sidebar.tsx
application/edge_agent/components/http_server/frontend_source/src/i18n/: en.ts  zh-cn.ts
application/edge_agent/components/http_server/frontend_source/src/pages/: FilesPage.tsx  McpPage.tsx  StatusPage.tsx
application/edge_agent/components/http_server/frontend_source/src/state/: dirty.ts
application/edge_agent/fatfs_image/: mcp_servers.json
application/edge_agent/fatfs_image/scripts/: sd_file_server.lua
components/claw_capabilities/cap_files/include/: cap_files.h
components/claw_capabilities/cap_files/src/: cap_files.c
components/claw_capabilities/cap_mcp_client/: CHANGELOG.md  CMakeLists.txt
components/claw_capabilities/cap_mcp_client/include/: cmd_cap_mcp_client.h
components/claw_capabilities/cap_mcp_client/src/: cap_mcp_client.c  cap_mcp_client_config.c  cap_mcp_client_config.h  cap_mcp_client_core.c  cap_mcp_client_internal.h  cap_mcp_client_sse.c  cap_mcp_client_sse.h  cmd_cap_mcp_client.c
components/claw_capabilities/cap_mcp_server/: CHANGELOG.md  CMakeLists.txt
components/claw_capabilities/cap_mcp_server/include/: cap_mcp_server.h  cap_mcp_transport_http_auth.h
components/claw_capabilities/cap_mcp_server/src/: cap_mcp_server.c  cap_mcp_transport_http_auth.c  cmd_cap_mcp_server.c
components/claw_modules/claw_core/: claw_core_analysis.md
components/common/app_claw/: app_capabilities.c  app_claw.c  app_claw_cli.c
components/lua_modules/lua_module_http/: CMakeLists.txt
components/lua_modules/lua_module_http/include/: lua_module_http.h
components/lua_modules/lua_module_http/src/: lua_module_http.c
